deploy/apex/base/apiproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiproxy
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      serviceAccountName: apex-serviceaccount
      containers:
        - name: caddy
          image: docker.io/library/caddy:2.6-alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
          securityContext:
            allowPrivilegeEscalation: true
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: caddyfile
