deploy/apex/base/apiproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiproxy
spec:
  ports:
    - port: 8080
      targetPort: 8080
