deploy/apex/base/apiproxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiproxy
  annotations:
    cert-manager.io/issuer: apex-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.apex.local
      secretName: apex-api-cert
  rules:
    - host: api.apex.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apiproxy
                port:
                  number: 8080
